Add roles endpoints and docs
